# docs/swagger.json
@@ -1,105 +1,43 @@
 {
     "swagger": "2.0",
     "info": {
-      "description": "API documentation for Testing Genez.",
+      "description": "API documentation for Students",
       "version": "1.0.0",
-      "title": "Testing Genez backend API Documentation"
+      "title": "Testing Documentation for Student Details"
     },
-    "host": "localhost:4000",
+    "host": "localhost:8000",
     "basePath": "/api",
     "tags": [
       {
-        "name": "Exam",
-        "description": "All Exam routes"
+        "name": "Upload",
+        "description": "Upload Routes"
       },
       {
-        "name": "Question",
-        "description": "All Question routes "
+        "name": "Retrieve",
+        "description": "Retrieve Student Data"
       },
       {
-        "name": "Branch",
-        "description": "All Branch routes"
-      },
-      {
-        "name": "Auth",
-        "description": "Authorization Routes"
-      }
+        "name": "Clear",
+        "description": "Clear all Data"
+      }      
     ],
     "schemes": ["http"],
     "paths": {
-      "/exam/exams": {
-        "get": {
-          "tags": ["Exam"],
-          "summary": "Will get all Exams info",
-          "description": "",
-          "operationId": "getAllExamData",
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "parameters": [],
-          "responses": {
-            "200": {
-              "description": "Success"
-            },
-            "403": {
-              "description": "Forbidden"
-            },
-            "405": {
-              "description": "Invalid input"
-            }
-          },
-          "security": [
-            {
-              "api_key": []
-            }
-          ]
-        }
-      },
-      "/question/questions": {
-        "get": {
-          "tags": ["Question"],
-          "summary": "Will get all Questions info",
-          "description": "",
-          "operationId": "getAllQuestionData",
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "parameters": [],
-          "responses": {
-            "200": {
-              "description": "Success"
-            },
-            "403": {
-              "description": "Forbidden"
-            },
-            "405": {
-              "description": "Invalid input"
-            }
-          },
-          "security": [
-            {
-              "api_key": []
-            }
-          ]
-        }
-      },
-      "/question/question": {
+      "/uploads": {
         "post": {
-          "tags": ["Question"],
-          "summary": "Add a new question",
+          "tags": ["Upload"],
+          "summary": "Upload using Csv",
           "description": "",
-          "operationId": "addNewQuestion",
+          "operationId": "uploadData",
           "consumes": ["application/json"],
           "produces": ["application/json"],
           "parameters": [
             {
-              "in": "body",
-              "name": "body",
-              "description": "Question to be added",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/AddQuestion"
-              }
-            }
-          ],
+              "in": "formData",
+              "name": "uploadCsv",
+              "type": "file"             
+            }     
+          ],          
           "responses": {
             "200": {
               "description": "Success"
@@ -107,8 +45,8 @@
             "403": {
               "description": "Forbidden"
             },
-            "400": {
-              "description": "Invalid input / Some error"
+            "405": {
+              "description": "Invalid input"
             }
           },
           "security": [
@@ -118,12 +56,80 @@
           ]
         }
       },
-      "/branch/branches": {
+      "/getStudentById/{id}":{
         "get": {
-          "tags": ["Branch"],
-          "summary": "Will get all Branch info",
+          "tags": ["Retrieve"],
+          "summary": "Retrieve Student by Id",
+          "description": "Retrieve Student by Id",
+          "operationId": "getStudentById",
+          "consumes": ["application/json"],
+          "produces": ["application/json"],
+          "parameters": [
+            {
+              "in": "path",
+              "name": "id",
+              "description": "Valid Student Id",
+              "required": true            
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "success"
+            },
+            "401":{
+              "description":"Unauthorized"
+            },
+            "403":{
+              "description":"Some Error occured"
+            }           
+          },          
+          "security": [
+            {
+              "api_key": []
+            }
+          ]
+        }
+      },
+      "/getResultStatus/{resultStatus}":{
+        "get": {
+          "tags": ["Retrieve"],
+          "summary": "Retrieve Student by Result",
+          "description": "Retrieve Student by Result",
+          "operationId": "getResultStatus",
+          "consumes": ["application/json"],
+          "produces": ["application/json"],
+          "parameters": [
+            {
+              "in": "path",
+              "name": "resultStatus",
+              "description": "Valid Result Status pass/failed",
+              "required": true            
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "success"
+            },
+            "401":{
+              "description":"Unauthorized"
+            },
+            "403":{
+              "description":"Some Error occured"
+            }           
+          },          
+          "security": [
+            {
+              "api_key": []
+            }
+          ]
+        }
+      },
+      "/clearAllData": {
+        "get": {
+          "tags": ["Clear"],
+          "summary": "Clear all Data",
           "description": "",
-          "operationId": "getAllBranchData",
+          "operationId": "clearAllData",
           "consumes": ["application/json"],
           "produces": ["application/json"],
           "parameters": [],
@@ -144,36 +150,7 @@
             }
           ]
         }
-      },
-      "/user/login": {
-        "post": {
-          "tags": ["Auth"],
-          "summary": "Login user and get Bearer Token",
-          "description": "",
-          "operationId": "login User",
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "in": "body",
-              "name": "body",
-              "description": "Login user parameters",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/LoginUser"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Success"
-            },
-            "405": {
-              "description": "Invalid input"
-            }
-          }
-        }
-      }
+      }      
     },
     "securityDefinitions": {
       "api_key": {
@@ -181,119 +158,5 @@
         "name": "Authorization",
         "in": "header"
       }
-    },
-    "definitions": {
-      "Exam": {
-        "type": "object",
-        "properties": {
-          "examId": {
-            "type": "integer",
-            "format": "int64",
-            "example": 12
-          },
-          "name": {
-            "type": "string",
-            "example": "Maths Test"
-          },
-          "date": {
-            "type": "date",
-            "example": "2020-08-08"
-          },
-          "duration": {
-            "type": "time",
-            "example": "01:00:00"
-          },
-          "questionCount": {
-            "type": "integer",
-            "example": 10
-          }
-        }
-      },
-      "Question": {
-        "type": "object",
-        "properties": {
-          "questionId": {
-            "type": "integer",
-            "format": "int64",
-            "example": 12
-          },
-          "title": {
-            "type": "string",
-            "example": "Define Biodiversity."
-          },
-  
-          "type": {
-            "type": "string",
-            "example": ["MCQ", "DESCRPTIVE"]
-          },
-          "marks": {
-            "type": "int64",
-            "example": "10"
-          }
-        }
-      },
-      "Branch": {
-        "type": "object",
-        "properties": {
-          "branchId": {
-            "type": "integer",
-            "format": "int64",
-            "example": 12
-          },
-          "name": {
-            "type": "string",
-            "example": "Computer Engg"
-          },
-          "capacity": {
-            "type": "integer",
-            "example": 60
-          }
-        }
-      },
-      "AddQuestion": {
-        "type": "object",
-        "properties": {
-          "title": {
-            "type": "string",
-            "example": "Define Biodiversity."
-          },
-          "type": {
-            "type": "string",
-            "example": "MCQ"
-          },
-          "marks": {
-            "type": "int64",
-            "example": "10"
-          }
-        }
-      },
-      "LoginUser": {
-          "type": "object",
-          "properties": {
-            "email": {
-              "type": "string",
-              "example": "mk@gmail.com"
-            },
-            "password": {
-              "type": "string",
-              "example": "fdsf"
-            }
-          }
-        },
-      "ApiResponse": {
-        "type": "object",
-        "properties": {
-          "code": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "type": {
-            "type": "string"
-          },
-          "message": {
-            "type": "string"
-          }
-        }
-      }
-    }
+    }    
   }
